--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.0-alpha.0911da3",
     "react-dom": "^16.4.0-alpha.0911da3",
     "react-scripts": "1.1.1",
+    "sharkhorse": "^4.0.0",
     "styled-components": "^3.1.6"
   },
   "scripts": {
