--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "date-fns": "^1.29.0",
     "immer": "^1.1.1",
     "react": "^16.4.0-alpha.0911da3",
+    "react-app-rewire-styled-components": "^3.0.0",
     "react-dom": "^16.4.0-alpha.0911da3",
     "react-icons": "^2.2.7",
     "react-motion": "^0.5.2",
@@ -14,10 +15,10 @@
     "styled-components": "^3.1.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject",
     "flow": "flow"
   },
   "devDependencies": {
