--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
     "react-icons": "^2.2.7",
     "react-motion": "^0.5.2",
     "react-scripts": "1.1.1",
+    "react-sound": "^1.1.0",
     "sharkhorse": "^4.0.0",
     "styled-components": "^3.1.6"
   },
   "devDependencies": {
-    "flow-bin": "^0.66.0",
-    "@storybook/react": "^3.3.15",
     "@storybook/addon-actions": "^3.3.15",
     "@storybook/addon-links": "^3.3.15",
     "@storybook/addons": "^3.3.15",
-    "babel-core": "^6.26.0"
+    "@storybook/react": "^3.3.15",
+    "babel-core": "^6.26.0",
+    "flow-bin": "^0.66.0"
   }
 }
