--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "date-fns": "^1.29.0",
     "immer": "^1.1.1",
-    "react": "^16.4.0-alpha.2",
+    "react": "16.3",
     "react-app-rewire-styled-components": "^3.0.0",
-    "react-dom": "^16.4.0-alpha.2",
+    "react-dom": "16.3",
     "react-icons": "^2.2.7",
     "react-motion": "^0.5.2",
     "react-scripts": "1.1.1",
